--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>MY-PORTFOLIO</title>
 </head>
 <body>
-    
+    <div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, culpa.</p></div>
 </body>
 </html>
